fix spacing of faq buttons

--- a/public/stylesheets/sass/index.scss
+++ b/public/stylesheets/sass/index.scss
@@ -113,7 +113,7 @@ $grey: lighten(#000, 25%);
   font-weight: 600;
   width: 30vw;
   margin-left: 18vw;
-  margin-bottom: 5vh;
+  margin-bottom: 2vh;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
